[project]
name = "ftl-merge"
version = "0.2.0"
description = "Merge-and-reconcile workflow: merge PRs, retract beliefs, regenerate specs"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Ben Thomasson", email = "ben.thomasson@gmail.com"}
]
keywords = ["automation", "beliefs", "merge", "code-expert"]
dependencies = []

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/benthomasson/ftl-merge"
Repository = "https://github.com/benthomasson/ftl-merge"
Issues = "https://github.com/benthomasson/ftl-merge/issues"

[project.scripts]
ftl-merge = "ftl_merge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
